stailing template. part 2

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -15,9 +15,9 @@
           "output": "img/sprite.png",
           "name": "sprite.png",
           "category": "IMAGE",
-          "size": 5058,
+          "size": 6438,
           "type": "png",
-          "initialSize": 5058,
+          "initialSize": 6438,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -385,6 +385,136 @@
           "size": 3680,
           "type": "png",
           "initialSize": 3680,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fb65a490": {
+          "id": "fb65a490",
+          "path": "img/img1.jpg",
+          "output": "img/img1.jpg",
+          "name": "img1.jpg",
+          "category": "IMAGE",
+          "size": 153235,
+          "type": "jpg",
+          "initialSize": 153235,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7aa152bd": {
+          "id": "7aa152bd",
+          "path": "img/img2.jpg",
+          "output": "img/img2.jpg",
+          "name": "img2.jpg",
+          "category": "IMAGE",
+          "size": 142433,
+          "type": "jpg",
+          "initialSize": 142433,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "889a1ebe": {
+          "id": "889a1ebe",
+          "path": "img/img3.jpg",
+          "output": "img/img3.jpg",
+          "name": "img3.jpg",
+          "category": "IMAGE",
+          "size": 115893,
+          "type": "jpg",
+          "initialSize": 115893,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "45be695b": {
+          "id": "45be695b",
+          "path": "img/img4.jpg",
+          "output": "img/img4.jpg",
+          "name": "img4.jpg",
+          "category": "IMAGE",
+          "size": 112720,
+          "type": "jpg",
+          "initialSize": 112720,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c8fde595": {
+          "id": "c8fde595",
+          "path": "img/img5.jpg",
+          "output": "img/img5.jpg",
+          "name": "img5.jpg",
+          "category": "IMAGE",
+          "size": 115597,
+          "type": "jpg",
+          "initialSize": 115597,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d757a96e": {
+          "id": "d757a96e",
+          "path": "img/img6.jpg",
+          "output": "img/img6.jpg",
+          "name": "img6.jpg",
+          "category": "IMAGE",
+          "size": 107277,
+          "type": "jpg",
+          "initialSize": 107277,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "090319b5": {
+          "id": "090319b5",
+          "path": "img/img7.jpg",
+          "output": "img/img7.jpg",
+          "name": "img7.jpg",
+          "category": "IMAGE",
+          "size": 131359,
+          "type": "jpg",
+          "initialSize": 131359,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6cd8a1e7": {
+          "id": "6cd8a1e7",
+          "path": "img/img8.jpg",
+          "output": "img/img8.jpg",
+          "name": "img8.jpg",
+          "category": "IMAGE",
+          "size": 126635,
+          "type": "jpg",
+          "initialSize": 126635,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "00477b93": {
+          "id": "00477b93",
+          "path": "img/news-pic.jpg",
+          "output": "img/news-pic.jpg",
+          "name": "news-pic.jpg",
+          "category": "IMAGE",
+          "size": 128135,
+          "type": "jpg",
+          "initialSize": 128135,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "785bacb0": {
+          "id": "785bacb0",
+          "path": "img/avatar.png",
+          "output": "img/avatar.png",
+          "name": "avatar.png",
+          "category": "IMAGE",
+          "size": 7875,
+          "type": "png",
+          "initialSize": 7875,
           "optimized": false,
           "height": 0,
           "width": 0
