--- a/prepros.cfg
+++ b/prepros.cfg
@@ -15,9 +15,9 @@
           "output": "img/sprite.png",
           "name": "sprite.png",
           "category": "IMAGE",
-          "size": 6438,
+          "size": 6807,
           "type": "png",
-          "initialSize": 6438,
+          "initialSize": 6807,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -515,6 +515,19 @@
           "size": 7875,
           "type": "png",
           "initialSize": 7875,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d867ad9b": {
+          "id": "d867ad9b",
+          "path": "img/logo-white.png",
+          "output": "img/logo-white.png",
+          "name": "logo-white.png",
+          "category": "IMAGE",
+          "size": 3723,
+          "type": "png",
+          "initialSize": 3723,
           "optimized": false,
           "height": 0,
           "width": 0
