--- a/prepros.cfg
+++ b/prepros.cfg
@@ -531,6 +531,26 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "df10d988": {
+          "id": "df10d988",
+          "path": "css/scss/objects.media.scss",
+          "output": "css/css/objects.media.css",
+          "name": "objects.media.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "3666d779"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
